# sftm

./: .gitignore  CChainController.cpp  CChainController.h  CChainController.hpp  CConcurrentPtrQueue.h  CConcurrentPtrQueue.hpp  CCriticalSectionLock.hpp  CMakeLists.txt  CPrivateHeapManager.cpp  CPrivateHeapManager.h  CPrivateHeapManager.hpp  CProfiler.cpp  CProfiler.h  CRawMemoryManager.cpp  CRawMemoryManager.h  CSftmChainController.cpp  CSftmChainController.h  CSftmConcurrentPtrQueue.h  CSftmCriticalSectionLock.cpp  CSftmCriticalSectionLock.h  CSftmPrivateHeapManager.cpp  CSftmPrivateHeapManager.h  CSftmRawMemoryManager.cpp  CSftmRawMemoryManager.h  CSftmSpinLock.cpp  CSftmSpinLock.h  CSftmSyncPrimitive.h  CSftmTask.cpp  CSftmTask.h  CSftmTaskAllocator.cpp  CSftmTaskAllocator.h  CSftmTaskManager.cpp  CSftmTaskManager.h  CSftmWorker.cpp  CSftmWorker.h  CSpinLock.cpp  CSpinLock.h  CSpinLock.hpp  CSyncPrimitive.hpp  CTask.cpp  (+21 more)
examples/demo/: demo.sln
examples/demo/demo/: demo.cpp  demo.vcxproj  demo.vcxproj.filters
include/: CChainController.hpp  CConcurrentPtrQueue.hpp  CSyncPrimitive.hpp  CTaskManager.hpp  CWorker.hpp  configs.h
include/Async/: CAsyncTask.hpp  CAsyncTaskManager.hpp  CAsyncWorker.hpp
include/Common/: CChainController.hpp  CConcurrentPtrQueue.hpp  CSpinLock.hpp  CSyncPrimitive.hpp  Utils.hpp
include/Sync/: CTask.hpp  CTaskManager.hpp  CWorker.hpp
source/: main.cpp
